--- a/src/DailyTaskManager/DailyTaskManager.csproj
+++ b/src/DailyTaskManager/DailyTaskManager.csproj
@@ -90,8 +90,6 @@
       <DependentUpon>DurationEdit.cs</DependentUpon>
     </Compile>
     <Compile Include="Editors\BaseEditor.cs" />
-    <Compile Include="Editors\CategoryEditor.cs" />
-    <Compile Include="Editors\TaskItemEditor.cs" />
     <Compile Include="Dialogs\EditTaskItemDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -104,11 +102,14 @@
     <Compile Include="Dialogs\EditSettingsDialog.Designer.cs">
       <DependentUpon>EditSettingsDialog.cs</DependentUpon>
     </Compile>
-    <Compile Include="Library\Factory.cs" />
+    <Compile Include="Editors\CategoryEditor.cs" />
+    <Compile Include="Editors\TaskItemEditor.cs" />
     <Compile Include="Library\DataExtensions.cs" />
     <Compile Include="Data\Category.cs" />
+    <Compile Include="Library\Factory.cs" />
     <Compile Include="Library\PropertyName.cs" />
     <Compile Include="Library\Sparkle.cs" />
+    <Compile Include="Library\Tuid.cs" />
     <Compile Include="Library\WorkerToggle.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -149,7 +150,6 @@
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
